# mixed-gm

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  sitemap.xml
docs/: index.md  reference.md
hume/: __init__.py  correlation.py  estimation.py  graphs.py
humlpy/: __init__.py  estimation.py
humpy/: __init__.py  estimation.py  graphs.py
reference/: index.html
scribbling/: random_stuff.py
search/: search_index.json
tests/: test_correlation.py  test_estimation.py  test_graphs.py
