[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hume"
requires-python = ">=3.10.0"
authors = [{ name = "Konstantin Göbler", email = "konstantin.goebler@tum.de" }]
maintainers = [
    { name = "Konstantin Göbler", email = "konstantin.goebler@tum.de" },
    { name = "Stephan Haug", email = "stephan.haug@tum.de" },
]
license = { file = "LICENSE" }
description = "High-dimensional Undirected Mixed graph Estimation - Python implementation"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "networkx>=2.6.0",
    "matplotlib",
]
readme = "README.md"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "mkdocs",
    "mike",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "uv",
]

[tool.hatch.version]
path = "hume/__init__.py"

[tool.ruff]
preview = true

lint.select = [
    "C90", # McCabe
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle
    "D",   # pydocstyle
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "NPY", # flake8-numpy
    "PL",  # pylint
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TD",  # flake8-todos
    "UP",  # pyupgrade
]
line-length = 120
lint.extend-unfixable = ["ISC"]
lint.ignore = [
    "ISC003",  # Explicit string concatenation
    "PLR0913", # Too many arguments (common for config functions)
    "PLR0914", # Too many local variables (acceptable in numerical code)
    "PLR2004", # Magic value in comparison (acceptable for numerical thresholds)
    "PLR6104", # Augmented assignment (not always clearer)
    "PLR6301", # Method could be static (acceptable in test classes)
    "ISC002",  # Implicitly concatenated string over multiple lines (acceptable for readability)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "NPY002",
    "D",
] # Allow legacy numpy random API and skip docstrings in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-public-methods = 35
max-nested-blocks = 10


[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false

[tool.pytest.ini_options]
testpaths = ["tests", "hume"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
